[gd_scene load_steps=6 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://root.gd" type="Script" id=2]
[ext_resource path="res://Assets/MapTiles/tower_placement_tileset.png" type="Texture" id=3]
[ext_resource path="res://Assets/Audio/Music/BG_1.mp3" type="AudioStream" id=4]

[sub_resource type="TileSet" id=1]
0/name = "tower_placement_tileset.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tower_placement_tileset.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Level_1" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 1, 1 )
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, -1610612735, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, -1610612735, 0, 65550, 0, 0, 65551, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, -1610612734, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, -1610612735, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, -1610612734, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, -1610612735, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393217, -1610612734, 0, 393218, -1610612734, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524298, 12, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0 )

[node name="nav" type="Navigation2D" parent="."]

[node name="tilemap_nav" type="TileMap" parent="nav"]
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 65536, 5, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, -1073741821, 0, 131074, 536870921, 0, 131075, 536870921, 0, 131076, 536870923, 0, 131077, 536870923, 0, 131078, -1610612731, 0, 131081, 536870921, 0, 131084, 536870921, 0, 196614, -1610612731, 0, 196621, 1610612739, 0, 196622, 5, 0, 196623, 5, 0, 262150, -1610612731, 0, 262157, -1073741819, 0, 327686, -1610612731, 0, 327693, -1073741819, 0, 393222, -1610612733, 0, 393223, 5, 0, 393224, 5, 0, 393225, 5, 0, 393226, 5, 0, 393227, 5, 0, 393228, 5, 0, 393229, 3, 0, 393238, 536870921, 0, 393244, 536870921, 0, 393246, 536870921, 0, 589843, -536870901, 0, 655365, -536870903, 0 )

[node name="start" type="Position2D" parent="."]
position = Vector2( -0.599792, 94.9948 )

[node name="end" type="Position2D" parent="."]
position = Vector2( 1026.05, 221.708 )

[node name="spawner_time" type="Timer" parent="."]
one_shot = true

[node name="entities" type="YSort" parent="."]

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI"]
margin_top = 480.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="points" type="Label" parent="UI"]
margin_left = 16.0
margin_top = 496.0
margin_right = 64.0
margin_bottom = 512.0
text = "Points:
000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lives" type="Label" parent="UI"]
margin_left = 16.0
margin_top = 544.0
margin_right = 56.0
margin_bottom = 575.0
text = "Lives:
100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tower" type="Button" parent="UI"]
margin_left = 184.0
margin_top = 504.0
margin_right = 250.0
margin_bottom = 568.0
text = "Tower"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_wave" type="Label" parent="UI"]
margin_left = 904.0
margin_top = 488.0
margin_right = 973.0
margin_bottom = 504.0
text = "Next Wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_wave_time" type="Label" parent="UI"]
margin_left = 896.0
margin_top = 512.0
margin_right = 976.0
margin_bottom = 552.0
text = "00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_next_wave" type="Button" parent="UI"]
margin_left = 896.0
margin_top = 536.0
margin_right = 1010.0
margin_bottom = 556.0
text = "Start Next Wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tower_placement" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1

[node name="Background" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
position = Vector2( 896, 536 )
stream = ExtResource( 4 )
volume_db = -30.0
autoplay = true

[connection signal="timeout" from="spawner_time" to="." method="_on_spawner_time_timeout"]
[connection signal="pressed" from="UI/tower" to="." method="_on_tower_pressed"]
[connection signal="pressed" from="UI/start_next_wave" to="." method="_on_start_next_wave_pressed"]
